--- a/index.html
+++ b/index.html
@@ -9,21 +9,76 @@
 </head>
 <body>
 
-    <div class="container-fluid bg-dark">
-        <div class="container">
-            <div class="row align-items-center py-3">
-                <div class="col-md-6">
-                    <h1 class="text-white">Школа информационной безопасности EduSec</h1>
-                </div>
-                <div class="col-md-6 text-right">
-                    <a href="#" class="text-white mx-3">О проекте</a>
-                    <a href="#" class="text-white mx-3">Преимущества</a>
-                    <a href="#" class="text-white mx-3">FAQ</a>
-                    <a href="#" class="text-white mx-3">Связаться с нами</a>
+    <nav>
+        <div class="container-fluid bg-dark">
+            <div class="container">
+                <div class="row align-items-center py-3">
+                    <div class="col-md-6">
+                        <h1 class="text-white">Школа информационной безопасности EduSec</h1>
+                    </div>
+                    <div class="col-md-6 text-right">
+                        <a href="#" id="about-link" class="text-white mx-3">О проекте</a>
+                        <a href="#" class="text-white mx-3">Преимущества</a>
+                        <a href="#" class="text-white mx-3">FAQ</a>
+                        <a href="#" id="contact-link" class="text-white mx-3">Связаться с нами</a>
+                    </div>
                 </div>
             </div>
         </div>
+    </nav>
+
+    <!-- Модальное окно "О проекте" -->
+    <div id="about-modal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="close-about">&times;</span>
+            <h2 id="about-title">О проекте</h2>
+            <p id="about-text"></p>
+        </div>
     </div>
+
+    <!-- Модальное окно "Админ" -->
+    <div id="admin-modal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="close-admin">&times;</span>
+            <h2>Админ</h2>
+            <form id="admin-form">
+                <div class="form-group">
+                    <label for="project-title">Название проекта</label>
+                    <input type="text" id="project-title" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="project-description">Описание проекта</label>
+                    <textarea id="project-description" class="form-control" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Сохранить</button>
+            </form>
+        </div>
+    </div>
+
+        <!-- Модальное окно "Связаться с нами" -->
+        <div id="contact-modal" class="modal">
+            <div class="modal-content">
+                <span class="close" id="close-contact">&times;</span>
+                <h2>Связаться с нами</h2>
+                <form id="contact-form">
+                    <div class="form-group">
+                        <label for="contact-name">Ваше имя</label>
+                        <input type="text" id="contact-name" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="contact-email">Ваш email</label>
+                        <input type="email" id="contact-email" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="contact-message">Ваше сообщение</label>
+                        <textarea id="contact-message" class="form-control" rows="4" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Отправить</button>
+                </form>
+            </div>
+        </div>
+
+    <script src="main.js"></script>
 
     <div class="container-fluid bg-image">
         <div class="container">
@@ -137,13 +192,16 @@
     <div class="container text-center mb-4">
         <div class="row justify-content-center">
             <div class="col-auto">
-                <a href="#">О проекте</a>
+                <a href="#" id="about-link-footer">О проекте</a>
             </div>
             <div class="col-auto">
                 <a href="#">Преимущества</a>
             </div>
             <div class="col-auto">
                 <a href="#">FAQ</a>
+            </div>
+            <div class="col-auto">
+                <a href="#" id="admin-link-footer">Админ</a>
             </div>
         </div>
     </div>
@@ -153,6 +211,12 @@
     </div>
 </footer>
 
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+    (function() {
+        emailjs.init('IsS3cXuj4iMyJTrZv');
+    })();
+</script>
 
 </body>
 </html>
