--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
 </head>
 <body>
 
@@ -222,7 +224,90 @@
 </div>
 
 
-<div class="container-fluid py-5 large-container">
+ <!-- Слайдер с услугами -->
+ <div class="container my-5">
+    <h2 class="text-center mb-4">Наши услуги</h2>
+    <div class="service-slider">
+        <div class="service-card">
+            <h3>Консультация по безопасности</h3>
+            <p>5000 руб.</p>
+        </div>
+        <div class="service-card">
+            <h3>Аудит безопасности</h3>
+            <p>15000 руб.</p>
+        </div>
+        <div class="service-card">
+            <h3>Тестирование на проникновение</h3>
+            <p>20000 руб.</p>
+        </div>
+        <div class="service-card">
+            <h3>Летняя школа ИБ</h3>
+            <p>115000 руб.</p>
+        </div>
+        <div class="service-card">
+            <h3>Обучение пентестингу WAPT</h3>
+            <p>60000 руб.</p>
+        </div>
+        <div class="service-card">
+            <h3>Обучение профессии аналитика ИБ</h3>
+            <p>120000 руб.</p>
+        </div>
+        <div class="service-card">
+            <h3>Личный куратор</h3>
+            <p>Договорная руб.</p>
+        </div>
+        
+    </div>
+</div>
+
+    <!-- Форма заказа услуги -->
+    <div class="container my-5">
+        <h2 class="text-center mb-4">Форма заказа услуги</h2>
+        <form id="service-order-form" onsubmit="return validateForm()">
+            <div class="form-group">
+                <label for="service-name">Название услуги</label>
+                <select class="form-control" id="service-name">
+                    <option value="Консультация по безопасности">Консультация по безопасности</option>
+                    <option value="Аудит безопасности">Аудит безопасности</option>
+                    <option value="Тестирование на проникновение">Тестирование на проникновение</option>
+                    <option value="Летняя школа ИБ">Летняя школа ИБ</option>
+                    <option value="Обучение пентестингу WAPT">Обучение пентестингу WAPT</option>
+                    <option value="Обучение профессии аналитика ИБ">Обучение профессии аналитика ИБ</option>
+                    <option value="Личный куратор">Личный куратор</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="client-name">Имя</label>
+                <input type="text" class="form-control" id="client-name" pattern="[A-Za-zА-Яа-яЁё\- ]+">
+            </div>
+            <div class="form-group">
+                <label for="client-email">E-mail</label>
+                <input type="text" class="form-control" id="client-email">
+            </div>
+            <div class="form-group">
+                <label for="client-phone">Телефон</label>
+                <input type="text" class="form-control" id="client-phone">
+            </div>
+            <div class="form-group">
+                <label for="contact-time">Удобное время для связи</label>
+                <input type="text" class="form-control" id="contact-time">
+            </div>
+            <div class="form-group">
+                <label for="payment-method">Способ оплаты</label>
+                <select class="form-control" id="payment-method">
+                    <option value="">Выберите способ оплаты</option>
+                    <option value="Картой">Картой</option>
+                    <option value="Наличными">Наличными</option>
+                    <option value="PayPal">PayPal</option>
+                </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Отправить</button>
+        </form>
+        <div id="confetti-canvas" class="confetti"></div>
+    </div>
+
+
+<div class="container-fluid bg-light py-5 large-container">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6 text-container">
@@ -297,7 +382,7 @@
 <script src="auth.js"></script>
 <script src="services.js"></script>
 <script src="users.js"></script>
-
+<script src="usl-val.js"></script>
 
 <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script>
@@ -306,7 +391,38 @@
     })();
 </script>
 
-
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('.service-slider').slick({
+                dots: true,
+                infinite: true,
+                speed: 300,
+                slidesToShow: 3,
+                slidesToScroll: 1,
+                responsive: [
+                    {
+                        breakpoint: 1024,
+                        settings: {
+                            slidesToShow: 2,
+                            slidesToScroll: 1,
+                            infinite: true,
+                            dots: true
+                        }
+                    },
+                    {
+                        breakpoint: 600,
+                        settings: {
+                            slidesToShow: 1,
+                            slidesToScroll: 1
+                        }
+                    }
+                ]
+            });
+        });
+    </script>
 
 </body>
 </html>
