Работа над Frontend.
Добавлены страницы для перехода по ссылкам - Преимущества (advantages.html) и Часто задаваемые вопросы FAQ (faq.html). Добавлен функционал динамического вывода данных из localstorage на этих страница - advantages.js и faq.js.

--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@
                 <a href="#" id="about-link-footer">О проекте</a>
             </div>
             <div class="col-auto">
-                <a href="#">Преимущества</a>
+                <a href="advantages.html">Преимущества</a>
             </div>
             <div class="col-auto">
-                <a href="#">FAQ</a>
+                <a href="faq.html">FAQ</a>
             </div>
             <div class="col-auto">
                 <a href="#" id="admin-link-footer">Админ</a>
@@ -377,12 +377,14 @@
     </div>
 </footer>
 
+
 <script src="validation.js"></script>
 <script src="main.js"></script>
 <script src="auth.js"></script>
 <script src="services.js"></script>
 <script src="users.js"></script>
 <script src="usl-val.js"></script>
+
 
 <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script>
